Fixed overflow caused by headers on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,34 @@ html {
   scroll-behavior: smooth;
 }
 
-h1,
-h2,
-h3 {
+h1 {
   font-size: 3rem;
   margin: 25px;
   padding: 0;
   font-family: Rosemary, papyrus, sans-serif;
 }
+
+@media (max-width: 550px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+}
+
+h2,
+h3 {
+  font-size: 2.5rem;
+  margin: 25px;
+  padding: 0;
+  font-family: Rosemary, papyrus, sans-serif;
+}
+
+@media (max-width: 550px) {
+  h2,
+  h3 {
+    font-size: 2rem;
+  }
+}
+
 a {
   color: #fff;
   text-decoration: none;
